force-app/main/default/objects/PaymentTransaction__c/PaymentTransaction__c.object-meta.xml
<CustomObject>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>PAT-{000000}</displayFormat>
        <label>Payment Transaction REF</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>