force-app/main/default/objects/PaymentTransaction__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ชื่อธนาคาร</description>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>PaymentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>