force-app/main/default/objects/PaymentTransaction__c/fields/BankBranch__c.field-meta.xml
<CustomField>
    <fullName>BankBranch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>สาขาธนาคาร</description>
    <label>Bank Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Bank__c</field>
            <operation>equals</operation>
            <valueField>BankBranch__c.BankName__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BankBranch__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>PaymentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>