force-app/main/default/objects/PaymentTransaction__c/fields/ChequeDate__c.field-meta.xml
<CustomField>
    <fullName>ChequeDate__c</fullName>
    <description>วันที่ออกเช็ค</description>
    <label>Cheque Date</label>
    <type>Date</type>
</CustomField>