force-app/main/default/objects/PaymentTransaction__c/fields/ChequeNo__c.field-meta.xml
<CustomField>
    <fullName>ChequeNo__c</fullName>
    <description>เลขที่ี่เช็ค</description>
    <label>Cheque No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>