force-app/main/default/objects/PaymentTransaction__c/fields/CompuDocumentNo__c.field-meta.xml
<CustomField>
    <fullName>CompuDocumentNo__c</fullName>
    <description>Document No in CompuSystem</description>
    <externalId>true</externalId>
    <label>Compu Document No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>