force-app/main/default/objects/PaymentTransaction__c/fields/CreditCardIssuer__c.field-meta.xml
<CustomField>
    <fullName>CreditCardIssuer__c</fullName>
    <description>ผู้ออกบัตรเครดิต</description>
    <label>Credit Card Issuer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAY</fullName>
            </value>
            <value>
                <fullName>BBL</fullName>
            </value>
            <value>
                <fullName>IBC</fullName>
            </value>
            <value>
                <fullName>KBK</fullName>
            </value>
            <value>
                <fullName>KTC</fullName>
            </value>
            <value>
                <fullName>SCB</fullName>
            </value>
            <value>
                <fullName>TBK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>