force-app/main/default/objects/PaymentTransaction__c/fields/CreditCardNo__c.field-meta.xml
<CustomField>
    <fullName>CreditCardNo__c</fullName>
    <description>เลขที่บัตรเครดิต</description>
    <label>Credit Card No</label>
    <length>16</length>
    <type>Text</type>
</CustomField>