force-app/main/default/objects/PaymentTransaction__c/fields/CreditCardType__c.field-meta.xml
<CustomField>
    <fullName>CreditCardType__c</fullName>
    <description>ประเภทของบัตรเครดิต</description>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CreditCardIssuer__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ผ่อนชำระ 10 เดือน</fullName>
            </value>
            <value>
                <fullName>เจซีบีการ์ด</fullName>
            </value>
            <value>
                <fullName>ผ่อนชำระ 3 เดือน</fullName>
            </value>
            <value>
                <fullName>ผ่อนชำระ 6 เดือน</fullName>
            </value>
            <value>
                <fullName>ชำระเต็มจำนวน</fullName>
            </value>
            <value>
                <fullName>เฉพาะบัตรธนาคารเดียวกับเครื่องรูด</fullName>
            </value>
            <value>
                <fullName>เฉพาะบัตร KTC ไม่รวม KTB</fullName>
            </value>
            <value>
                <fullName>บัตรเครดิตระดับพิเศษ</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
                <isActive>false</isActive>
                <label>Mastercard</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <isActive>false</isActive>
                <label>P1</label>
            </value>
            <value>
                <fullName>Visa</fullName>
                <isActive>false</isActive>
                <label>Visa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>