force-app/main/default/objects/PaymentTransaction__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>เลขอ้างอิงลำดับ Payment transaction</description>
    <label>Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>