force-app/main/default/objects/PaymentTransaction__c/fields/LastUpdateInCompu__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateInCompu__c</fullName>
    <description>Last Update time in compu system</description>
    <label>Last Update in Compu</label>
    <type>DateTime</type>
</CustomField>