force-app/main/default/objects/PaymentTransaction__c/fields/OwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFirstName__c</fullName>
    <description>ชื่อจริงของผู้้ถือบัตรเครดิต</description>
    <label>Owner First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>