force-app/main/default/objects/PaymentTransaction__c/fields/OwnerLastName__c.field-meta.xml
<CustomField>
    <fullName>OwnerLastName__c</fullName>
    <description>นามสกุลของผู้ถือบัตรเครดิต</description>
    <label>Owner Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>