force-app/main/default/objects/PaymentTransaction__c/fields/OwnerMobileNo__c.field-meta.xml
<CustomField>
    <fullName>OwnerMobileNo__c</fullName>
    <description>หมายเลขโทรศัพท์ของผู้ถือบัตรเครดิต</description>
    <label>Owner Mobile No.</label>
    <type>Phone</type>
</CustomField>