force-app/main/default/objects/PaymentTransaction__c/fields/OwnerTitle__c.field-meta.xml
<CustomField>
    <fullName>OwnerTitle__c</fullName>
    <description>คำนำหน้าชื่อของผู้ถือบัตรเครดิต</description>
    <label>Owner Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>นาย</fullName>
            </value>
            <value>
                <fullName>นาง</fullName>
            </value>
            <value>
                <fullName>นางสาว</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>