force-app/main/default/objects/PaymentTransaction__c/fields/PayInBookCode__c.field-meta.xml
<CustomField>
    <fullName>PayInBookCode__c</fullName>
    <description>เลขบัญชีที่โอนเงินเข้า</description>
    <label>Pay In Book Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TransfertoBank__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>111-3-91273-6</fullName>
            </value>
            <value>
                <fullName>111-0-04363-1</fullName>
            </value>
            <value>
                <fullName>111-2-98517-6</fullName>
            </value>
            <value>
                <fullName>074-0-20644-3</fullName>
            </value>
            <value>
                <fullName>720-2-65022-4</fullName>
            </value>
            <value>
                <fullName>210-0-70049-7</fullName>
            </value>
            <value>
                <fullName>100000300540476</fullName>
            </value>
            <value>
                <fullName>111-393332-6</fullName>
            </value>
            <value>
                <fullName>111-004443-3</fullName>
            </value>
            <value>
                <fullName>111-454372-6</fullName>
            </value>
            <value>
                <fullName>111-0-05106-5</fullName>
            </value>
            <value>
                <fullName>014-278647-3</fullName>
            </value>
            <value>
                <fullName>2100738125</fullName>
            </value>
            <value>
                <fullName>111-453135-5</fullName>
            </value>
            <value>
                <fullName>170-064690-2</fullName>
            </value>
            <value>
                <fullName>111-0-05132-4</fullName>
            </value>
            <value>
                <fullName>014-2-76039-6</fullName>
            </value>
            <value>
                <fullName>777-6-14263-7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>