force-app/main/default/objects/PaymentTransaction__c/fields/PayinDate__c.field-meta.xml
<CustomField>
    <fullName>PayinDate__c</fullName>
    <description>วันที่นำเข้า</description>
    <label>PayinDate</label>
    <type>DateTime</type>
</CustomField>