force-app/main/default/objects/PaymentTransaction__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>วิธีการชำระเงิน</description>
    <label>Payment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card(Include debit card/Payment gateway)</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Alipay</fullName>
                <isActive>false</isActive>
                <label>Alipay</label>
            </value>
            <value>
                <fullName>Cashier Cheque</fullName>
                <isActive>false</isActive>
                <label>Cashier Cheque</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
                <isActive>false</isActive>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Key-in</fullName>
                <isActive>false</isActive>
                <label>Key-in</label>
            </value>
            <value>
                <fullName>Payment Gateway</fullName>
                <isActive>false</isActive>
                <label>Payment Gateway</label>
            </value>
            <value>
                <fullName>Union Pay</fullName>
                <isActive>false</isActive>
                <label>Union Pay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>