force-app/main/default/objects/PaymentTransaction__c/fields/PaymentReceiptNo__c.field-meta.xml
<CustomField>
    <fullName>PaymentReceiptNo__c</fullName>
    <description>เลขที่ใบเสร็จที่ชำระเงิน</description>
    <formula>&quot;1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Receipt No.</label>
    <type>Text</type>
</CustomField>