force-app/main/default/objects/PaymentTransaction__c/fields/PaymentVat__c.field-meta.xml
<CustomField>
    <fullName>PaymentVat__c</fullName>
    <description>จำนวนเงิน VAT</description>
    <label>PaymentVat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>