force-app/main/default/objects/PaymentTransaction__c/fields/PaymentWht__c.field-meta.xml
<CustomField>
    <fullName>PaymentWht__c</fullName>
    <description>ภาษีหัก ณ ที่จ่าย</description>
    <label>PaymentWht</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>