force-app/main/default/objects/PaymentTransaction__c/fields/TransactionExternalID__c.field-meta.xml
<CustomField>
    <fullName>TransactionExternalID__c</fullName>
    <description>Receipt No.+Index</description>
    <externalId>true</externalId>
    <label>Transaction External ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>