force-app/main/default/objects/PaymentTransaction__c/fields/TransfertoBank__c.field-meta.xml
<CustomField>
    <fullName>TransfertoBank__c</fullName>
    <description>รหัสธนาคารที่โอนไป</description>
    <label>Transfer to Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCB</fullName>
            </value>
            <value>
                <fullName>IBC</fullName>
            </value>
            <value>
                <fullName>KTB</fullName>
            </value>
            <value>
                <fullName>TFB</fullName>
            </value>
            <value>
                <fullName>BBL</fullName>
            </value>
            <value>
                <fullName>BOC</fullName>
            </value>
            <value>
                <fullName>NBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>