force-app/main/default/objects/PaymentTransaction__c/fields/VatFee__c.field-meta.xml
<CustomField>
    <fullName>VatFee__c</fullName>
    <description>VATค่าธรรมเนียม</description>
    <label>VatFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>